<resources>
    <string name="app_name">Songle</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Songle</string>
    <string name="playButton">Play</string>
    <string name="amateurButton">Amateur</string>
    <string name="gstButton">Getting Started</string>
    <string name="fcoButton">Feeling Confident</string>
    <string name="difficultButton">Difficult</string>
    <string name="impossibleButton">Impossible</string>
    <string name="chooseLevel">Choose difficulty level</string>
    <string name="songleText">Songle</string>
    <string name="settings">Settings</string>
    <string name="resumeButton">Resume</string>
    <string name="wordLiButton">Word List</string>
    <string name="getHintButton">Get Hint</string>
    <string name="quitButton">Quit Current Game</string>
    <string name="mainMenuButton">Main Menu</string>
    <string name="newGameButton">New Game</string>
    <string name="yesButton">Yes</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_summ">pref_sync_summ</string>
    <string name="pref_syncConnectionType">pref_syncConnectionType</string>
    <string name="pref_syncConnectionTypes_default">pref_syncConnectionTypes_default</string>
...
    <string name="xml_error">Error parsing XML</string>
    <string name="page_title">Page title</string>
    <string name="updated">Updated</string>
    <string name="newword">Congratulations! You have collected a new word.</string>
    <string name="guessStr">Guess</string>
    <string name="guessPrompt">Your guess:</string>
    <string name="guessButton">Guess!</string>
    <string name="settingsWheel">Settings</string>
    <string name="musicNote1">Music note</string>
    <string name="musicNote2">Music Note 2</string>
    <string name="musicNote3">Music Note 3</string>
    <string name="trebleClef">Treble Clef</string>
    <string name="closeButton">Close Button</string>
    <string name="randomButton">Random</string>
    <string name="buyHint">Would you like to buy 5 words for 20 pts?</string>
    <string name="buyButton">Buy!</string>
    <string name="incorrectGuess">Your guess was not correct</string>
    <string name="tryAgain">Try again</string>
    <string name="correctGuess">Congratulations! Your guess was correct</string>
    <string name="mainMenu">Main Menu</string>
    <string name="anotherSong">Choose another song</string>
    <string name="song1">Song 1</string>
    <string name="song2">Song 2</string>
    <string name="song3">Song 3</string>
    <string name="song5">Song 5</string>
    <string name="song4">Song 4</string>
    <string name="chooseSong">Choose a song</string>
    <string name="song6">Song 6</string>
    <string name="song7">Song 7</string>
    <string name="song8">Song 8</string>
    <string name="quitGame">Quit current game</string>
    <string name="wordsCollected">Words collected</string>
    <string name="quit">Quit</string>
    <string name="confirmQuit">Are you sure you would like to quit the current game? All data will be lost</string>
    <string name="random">random</string>
    <string name="toWordList">Word List</string>
    <string name="goBack">Are you sure you want to go back? The current game will be lost</string>
    <string name="confirmBack">Go back</string>
    <string name="Map">bottom_navigation_map</string>
    <string name="WordList">bottom_navigation_wordlist</string>
    <string name="Settings">bottom_navigation_settings</string>
    />
</resources>

