<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#C0000000"
    >

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cross" />

    <TextView
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:text="@string/guessPrompt" />

    <EditText
        android:id="@+id/guessText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:inputType="text" />

    <Button
        android:id="@+id/submitGuess"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/guessButton" />


</LinearLayout>